# poundCake

./: .env.example  .gitignore  Dockerfile  README.md  check-all.sh  pyproject.toml
.github/workflows/: build-push.yaml  release.yaml
config/: alertmanager.yml
docs/: CLI.md
helm/poundcake/: Chart.yaml  values.yaml
helm/poundcake/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  rbac.yaml  secret.yaml
src/poundcake/: __init__.py  __main__.py  api.py  apikey_manager.py  auth.py  config.py  discovery.py  engine.py  git_manager.py  logging.py  main.py  management.py  prometheus.py  prometheus_crd_manager.py  prometheus_rule_manager.py  stackstorm.py
src/poundcake/handlers/: __init__.py  base.py  examples.py  registry.py  yaml_config.py
src/poundcake/models/: __init__.py  alerts.py  remediation.py  tracking.py
src/poundcake/state/: __init__.py  base.py  memory.py  redis_store.py
src/poundcake_cli/: client.py
src/poundcake_cli/commands/: rules.py
tests/: __init__.py  test_api.py  test_handlers.py  test_models.py
